--- a/css/intro-trial.css
+++ b/css/intro-trial.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 body{
-    background-image: url("../images/intro-trial.png");
+    background-image: url("../images/Intro.png");
     background-size:cover;
 }
 
