--- a/css/landingg.css
+++ b/css/landingg.css
@@ -120,6 +120,12 @@ body{
     font-size: medium;
 }
 
+.button-signout:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition:0.3s;
+}
+
 .div-landing-butts{
     display: flex;
     align-items: center;
@@ -128,8 +134,6 @@ body{
     margin-top:7rem;
     
 }
-
-
 
 .butt-security{
     border-radius:2rem;
@@ -142,6 +146,15 @@ body{
     font-size: large;
 }
 
+.butt-security:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition:0.3s;
+    box-shadow:0px 0px 3px 3px #b7bddd;
+    /* background: #fff;
+    color:#3547A3; */
+}
+
 .butt-employees{
     border-radius:2rem;
     height:4rem;
@@ -151,6 +164,12 @@ body{
     font-size: large;
 }
 
+.butt-employees:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition:0.3s;
+}
+
 .butt-locations{
     border-radius:2rem;
     height:4rem;
@@ -158,6 +177,12 @@ body{
     font-family:poppins;
     background-color: white;
     font-size: large;
+}
+
+.butt-locations:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition:0.3s;
 }
 
 a{
