--- a/css/loginn.css
+++ b/css/loginn.css
@@ -14,12 +14,21 @@ body{
     /* border-width: 0rem; */
     padding: 0.5rem;
     color:white;
+    border-width: 0rem;;
     border-radius:1rem;
     margin-top: 0.5rem;
     font-family: poppins;
     /* height:2rem; */
-    width:30%;
+    width:25%;
     text-align: center;
+    margin-left: 0.1rem;;
+}
+
+.button-submit:hover{
+    transition: 0.3s;
+    /* background-color: #4857a5; */
+    cursor: pointer;
+    transform: scale(1.10);
 }
 
 .input-login1{
@@ -41,9 +50,24 @@ body{
     width:50%;
     margin-top: 0.5rem;
 }
+
+.username:hover{
+    transition: 0.3s;
+    /* background-color: #4857a5; */
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
 .password{
     width:50%;
     margin-top: 0.7rem;
+}
+
+.password:hover{
+    transition: 0.3s;
+    /* background-color: #4857a5; */
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 a{
@@ -56,6 +80,7 @@ label{
     color:#233696;
     font-family: poppins;
     font-size: x-large;
+    margin-left: 0.1rem;
 }
 
 input{
